hugr-model/tests/snapshots/syntax__add.snap
---
source: hugr-model/tests/syntax.rs
expression: "roundtrip(include_str!(\"fixtures/model-add.edn\"))"
---
(hugr 0)

(define-func
  example.add
  (core.fn
    [arithmetic.int.types.int arithmetic.int.types.int]
    [arithmetic.int.types.int]
    (ext))
  (dfg [%0 %1] [%2]
    (signature
      (core.fn
        [arithmetic.int.types.int arithmetic.int.types.int]
        [arithmetic.int.types.int]
        (ext)))
    (arithmetic.int.iadd [%0 %1] [%2]
      (signature
        (core.fn
          [arithmetic.int.types.int arithmetic.int.types.int]
          [arithmetic.int.types.int]
          (ext))))))
