hugr-model/tests/snapshots/syntax__alias.snap
---
source: hugr-model/tests/syntax.rs
expression: "roundtrip(include_str!(\"fixtures/model-alias.edn\"))"
---
(hugr 0)

(declare-alias local.float core.type)

(define-alias local.int core.type arithmetic.int.types.int)

(define-alias local.endo core.type (core.fn [] [] (ext)))
