hugr-model/tests/snapshots/syntax__constraints.snap
---
source: hugr-model/tests/syntax.rs
expression: "roundtrip(include_str!(\"fixtures/model-constraints.edn\"))"
---
(hugr 0)

(declare-func
  array.replicate
  (param ?n core.nat)
  (param ?t core.type)
  (where (core.nonlinear ?t))
  (core.fn [?t] [(collections.array.array ?n ?t)] (ext)))

(declare-func
  array.copy
  (param ?n core.nat)
  (param ?t core.type)
  (where (core.nonlinear ?t))
  (core.fn
    [(collections.array.array ?n ?t)]
    [(collections.array.array ?n ?t) (collections.array.array ?n ?t)]
    (ext)))

(define-func
  util.copy
  (param ?t core.type)
  (where (core.nonlinear ?t))
  (core.fn [?t] [?t ?t] (ext))
  (dfg [%0] [%0 %0] (signature (core.fn [?t] [?t ?t] (ext)))))
