hugr-model/tests/snapshots/syntax__decl_exts.snap
---
source: hugr-model/tests/syntax.rs
expression: "roundtrip(include_str!(\"fixtures/model-decl-exts.edn\"))"
---
(hugr 0)

(declare-ctr array.Array (param ?t core.type) (param ?n core.nat) core.type
  (meta (core.meta.description "Fixed size array.")))

(declare-operation
  array.Init
  (param ?t core.type)
  (param ?n core.nat)
  (core.fn [?t] [(array.Array ?t ?n)] (ext))
  (meta
    (core.meta.description
      "Initialize an array of size ?n with copies of a default value.")))
