hugr-model/tests/snapshots/syntax__literals.snap
---
source: hugr-model/tests/syntax.rs
expression: "roundtrip(include_str!(\"fixtures/model-literals.edn\"))"
---
(hugr 0)

(define-alias mod.string core.str "\"\n\r\t\\👍")

(define-alias mod.bytes core.bytes (bytes "SGVsbG8gd29ybGQg8J+Yig=="))

(define-alias mod.float core.float -3.141)
